cmake_minimum_required(VERSION 3.19)
project(Algo_Study)

set(CMAKE_CXX_STANDARD 14)

add_executable(Algo_Study
        "AlgoStudy/2933 미네랄.cpp"
        "AlgoStudy/6087 레이저 통신.cpp" "AlgoStudy/2186 문자판.cpp" "AlgoStudy/2748 피보나치 수 2.cpp" "AlgoStudy/1463 1로 만들기.cpp" "AlgoStudy/9095 1,2,3 더하기.cpp" "AlgoStudy/2579 계단 오르기.cpp" "AlgoStudy/11726 2xn 타일링.cpp" "AlgoStudy/11722 가장 긴 감소하는 부분 수열.cpp" "AlgoStudy/11053 가장 긴 증가하는 부분 수열.cpp" "AlgoStudy/11055 가장 큰 증가 부분 수열.cpp" "AlgoStudy/11054 가장 긴 바이토닉 부분 수열.cpp" "AlgoStudy/12015 가장 긴 증가하는 부분 수열 2.cpp")
