cmake_minimum_required(VERSION 3.19)
project(Algo_Study)

set(CMAKE_CXX_STANDARD 14)

add_executable(Algo_Study
        "AlgoStudy/2933 미네랄.cpp"
        "AlgoStudy/6087 레이저 통신.cpp" "AlgoStudy/2186 문자판.cpp" "AlgoStudy/2748 피보나치 수 2.cpp" "AlgoStudy/1463 1로 만들기.cpp" "AlgoStudy/9095 1,2,3 더하기.cpp" "AlgoStudy/2579 계단 오르기.cpp" "AlgoStudy/11726 2xn 타일링.cpp" "AlgoStudy/11722 가장 긴 감소하는 부분 수열.cpp" "AlgoStudy/11053 가장 긴 증가하는 부분 수열.cpp" "AlgoStudy/11055 가장 큰 증가 부분 수열.cpp" "AlgoStudy/11054 가장 긴 바이토닉 부분 수열.cpp" "AlgoStudy/12015 가장 긴 증가하는 부분 수열 2.cpp" "AlgoStudy/12738 가장 긴 증가하는 부분 수열 3.cpp" "AlgoStudy/14002 가장 긴 증가하는 부분 수열 4.cpp" "AlgoStudy/16197 두 둥전.cpp" "AlgoStudy/2146 다리 만들기.cpp" "AlgoStudy/14003 가장 긴 증가하는 부분 수열 5.cpp" "AlgoStudy/1654 랜선 자르기.cpp" "AlgoStudy/1152 단어의 개수.cpp" "AlgoStudy/1157 단어 공부.cpp" "AlgoStudy/1074 Z.cpp" "AlgoStudy/리트코드 미로 타워 디펜스.cpp" "AlgoStudy/2589 보물섬.cpp" "AlgoStudy/13913 숨바꼭질 4.cpp" "AlgoStudy/1697 숨바꼭질.cpp" "AlgoStudy/12851 숨바꼭질 2.cpp")
